fixed card overlapping issue

--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -10,4 +10,5 @@
   background-color: rgb(136, 136, 136);
   margin-left: auto;
   margin-right: auto;
+  z-index: 1;
 }
